Fix hovercard background color when using Dark Mode
Summary:
This CSS fix replaces the disabled hovercard hard coded white background color value by the page.content CSS variable.

Fix : T15056

Test Plan:
- Flush all Phorge caches
- Sign in
- Open any page including a reference to a closed manifest (https://we.phorge.it/D25395)
- Mouve the mouse over the closed manifest reference
- Check that hovercard background color is consistent with the theme.

Reviewers: O1 Blessed Committers, valerio.bozzolan

Reviewed By: O1 Blessed Committers, valerio.bozzolan

Subscribers: tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Differential Revision: https://we.phorge.it/D25402

--- a/webroot/rsrc/css/phui/phui-hovercard.css
+++ b/webroot/rsrc/css/phui/phui-hovercard.css
@@ -113,7 +113,7 @@
 }
 
 .hovercard-task-view .phui-oi-disabled.phui-workcard {
-  background-color: #fff;
+  background-color: {$page.content};
 }
 
 .phui-hovercard-object-type  {
